[package]
name = "spidermonkey-sys"
version = "0.0.1"
description = "Low level bindings to spidermonkey"
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
cxx = { version = "1.0.129", features = ["c++20"] }

[build-dependencies]
anyhow = "1.0.91"
bindgen = "0.70.1"
cxx-build = "1.0.129"
pkg-config = "0.3.31"
