[package]
name = "spidermonkey-sys"
version = "0.0.1"
description = "Low level bindings to spidermonkey"
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
cxx = { version = "1.0.133", features = ["c++20"] }
encoding_c = "0.9.8"
encoding_c_mem = "0.2.6"
icu_capi = "1.5.1"
libz-sys = { version = "1.1.20", default-features = false, features = ["zlib-ng"] }

[build-dependencies]
anyhow = "1.0.94"
base16ct = { version = "0.2.0", features = ["std"] }
bindgen = "0.71.1"
cxx-build = "1.0.133"
sha2 = "0.10.8"
tar = "0.4.43"
xz2 = "0.1.7"
